bug 829963 - fix hi-/lo-dpi scaling in window opened from script with explicit size on secondary display. r=roc a=bajaj