layout/base/nsPresContext.cpp
@@ -1662,9 +1662,8 @@ nsPresContext::UIResolutionChangedInternal()
 {
   mPendingUIResolutionChanged = false;
 
-  if (mDeviceContext->CheckDPIChange()) {
-    AppUnitsPerDevPixelChanged();
-  }
+  mDeviceContext->CheckDPIChange();
+  AppUnitsPerDevPixelChanged();
 
   mDocument->EnumerateSubDocuments(UIResolutionChangedSubdocumentCallback,
                                    nullptr);
